# napalm-sros

./: .gitignore  .pre-commit-config.yaml  AUTHORS  INSTALL.md  Install.md  MANIFEST.in  Makefile  README.md  README_TEST.md  example_script.py  example_xml_dict_diff_script.py  example_xml_script.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: napalm-sros-ci.yml  publish_to_pypi.py  python-app.yml
napalm_sros/: __init__.py  nc_filters.py  sros.py
napalm_sros/api/: __init__.py  get_bgp_neighbors.py  get_bgp_neighbors_detail.py  util.py
napalm_sros/templates/: set_hostname.j2
napalm_sros/utils/: parse_output_to_dict.py  utils.py
napalm_sros/utils/textfsm_templates/: nokia_sros_show_service_fdb_mac.tpl
test/: run_test.sh  sample_test_api.py
test/unit/: TestDriver.py  TestNokiaSROSDriver.py  conftest.py
test/unit/mocked_data/test_get_arp_table/normal/: get_arp_table.xml
test/unit/sros/: initial.conf  merge_good.conf  merge_good.diff  merge_typo.conf  new_good.conf  new_good.diff  new_typo.conf
test/unit/sros/mock_data/: configure_global.txt  get_arp_table.txt  get_arp_table_with_vrf.txt  get_bgp_config.txt  get_bgp_neighbors.txt  get_bgp_neighbors_detail.txt  get_config_candidate.txt  get_environment.txt  get_facts.txt  get_interfaces_counters.txt  get_interfaces_ip.txt  get_ipv6_neighbors_table.txt  get_lldp_neighbors.txt  get_network_instances.txt  get_probes_results.txt  get_route_to.txt  get_snmp_information.txt  show_router_Base_route-table_1_0_4_0_24_.txt  traceroute_8_8_8_8_wait_10_ttl_255.txt
(+61 files in other folders)
